--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- Navigation Bar -->
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -18,14 +17,15 @@
     </ul>
   </nav>
 
-  <!-- Main Content -->
   <header>
     <h1>Welcome to My Portfolio</h1>
-    <p>Projects, Work Experience, CTF Writeups, and Awards</p>
+    <p>This is where I showcase my projects, experience, CTF write-ups, and awards.</p>
   </header>
 
   <footer>
     <p>© 2025 Chris Begines</p>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
