--- a/index.html
+++ b/index.html
@@ -1,29 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chris Begines | Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chris Begines</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="experience.html">Experience</a></li>
-      <li><a href="ctf.html">CTF Write-ups</a></li>
-      <li><a href="awards.html">Awards</a></li>
-    </ul>
-  </nav>
-
-  <header>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is where I showcase my projects, experience, CTF write-ups, and awards.</p>
+  <header id="hero">
+    <nav class="main-nav">
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#ctf">CTF</a>
+      <a href="#experience">Experience</a>
+      <a href="#awards">Awards</a>
+      <a href="#contact">Contact</a>
+    </nav>
+    <div class="intro">
+      <h1>I'm Chris Begines,</h1>
+      <h2>a Security Enthusiast / Developer</h2>
+    </div>
   </header>
 
-  <footer>
-    <p>© 2025 Chris Begines</p>
+  <section id="projects" class="section">
+    <h2>Projects</h2>
+    <div class="project-list">
+      <div class="project-card">
+        <img src="img/project1.png" alt="Project 1 screenshot" />
+        <h3>Project One</h3>
+        <p>Short description of project one.</p>
+        <a href="#">View More</a>
+      </div>
+      <div class="project-card">
+        <img src="img/project2.png" alt="Project 2 screenshot" />
+        <h3>Project Two</h3>
+        <p>Short description of project two.</p>
+        <a href="#">View More</a>
+      </div>
+      <!-- add more cards -->
+    </div>
+  </section>
+
+  <section id="ctf" class="section">
+    <h2>CTF Write-ups</h2>
+    <ul class="ctf-list">
+      <li><a href="#">Challenge A — Short summary</a></li>
+      <li><a href="#">Challenge B — Short summary</a></li>
+      <!-- more -->
+    </ul>
+  </section>
+
+  <section id="experience" class="section">
+    <h2>Experience</h2>
+    <div class="experience-list">
+      <div class="experience-item">
+        <h3>Job/Role Title</h3>
+        <span>Company — Dates</span>
+        <p>Description of role & achievements.</p>
+      </div>
+      <!-- more items -->
+    </div>
+  </section>
+
+  <section id="awards" class="section">
+    <h2>Awards & Recognitions</h2>
+    <ul class="award-list">
+      <li>🏆 Award or Achievement 1, Year</li>
+      <li>🏅 Award or Achievement 2, Year</li>
+      <!-- more -->
+    </ul>
+  </section>
+
+  <footer id="contact" class="section footer">
+    <p>Made with ❤️ by Chris Begines</p>
+    <p>Social / links: <a href="#">GitHub</a> | <a href="#">LinkedIn</a> | <a href="#">Email</a></p>
   </footer>
 
   <script src="js/script.js"></script>
