--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <footer id="contact" class="section footer">
     <p>Made with ❤️ by Chris Begines</p>
-    <p>Social / links: <a href="#">GitHub</a> | <a href="#">LinkedIn</a> | <a href="#">Email</a></p>
+    <p>Social / links: <a href="https://github.com/ChrisBegines123">GitHub</a> | <a href="https://www.linkedin.com/in/chrisbegines/">LinkedIn</a> | <a href="christopherbegines@gmail.com">Email</a></p>
   </footer>
 
   <script src="js/script.js"></script>
