--- a/index.html
+++ b/index.html
@@ -23,65 +23,43 @@
   <!-- About Section -->
   <section id="about" class="section hero">
     <h1>Hi, I'm Chris Begines</h1>
-    <p>A cybersecurity student and developer passionate about reverse engineering, CTFs, and building secure systems.</p>
+    <p>A cybersecurity student and developer passionate about reverse engineering, CTFs, and secure systems.</p>
+    <div class="social-buttons">
+      <a href="https://github.com/ChrisBegines123" target="_blank" class="btn">GitHub</a>
+      <a href="https://www.linkedin.com/in/YOUR-LINKEDIN" target="_blank" class="btn">LinkedIn</a>
+      <a href="mailto:YOUR-EMAIL@gmail.com" class="btn">Gmail</a>
+    </div>
   </section>
 
-  <!-- Projects Section -->
+  <!-- Empty Placeholder Sections -->
   <section id="projects" class="section">
     <h2>Projects</h2>
-    <div class="project-list">
-      <div class="project-card">
-        <h3>Project Title</h3>
-        <p>Brief description of project goes here.</p>
-        <a href="#">View More</a>
-      </div>
-      <!-- Add more project cards -->
-    </div>
+    <p>Coming soon...</p>
   </section>
 
-  <!-- Experience Section -->
   <section id="experience" class="section">
     <h2>Experience</h2>
-    <div class="experience-item">
-      <h3>Internship / Job Title</h3>
-      <span>Company — Dates</span>
-      <p>Describe your role, key contributions, and results.</p>
-    </div>
+    <p>Coming soon...</p>
   </section>
 
-  <!-- CTF Section -->
   <section id="ctf" class="section">
     <h2>CTF Write-ups</h2>
-    <ul>
-      <li><a href="#">Challenge 1 — Short description</a></li>
-      <li><a href="#">Challenge 2 — Short description</a></li>
-    </ul>
+    <p>Coming soon...</p>
   </section>
 
-  <!-- Awards Section -->
   <section id="awards" class="section">
     <h2>Awards</h2>
-    <ul>
-      <li>🏆 Award Name (Year)</li>
-      <li>🏅 Another Award (Year)</li>
-    </ul>
+    <p>Coming soon...</p>
   </section>
 
-  <!-- Certifications Section -->
   <section id="certifications" class="section">
     <h2>Certifications</h2>
-    <ul>
-      <li>CompTIA Security+ (Expected 2025)</li>
-      <li>Other certifications…</li>
-    </ul>
+    <p>Coming soon...</p>
   </section>
 
-  <!-- Contact Section -->
   <section id="contact" class="section footer">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:christopherbegines@gmail.com">christopherbegines@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/ChrisBegines123">ChrisBegines123</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/chrisbegines/">LinkedIn</a></p>
+    <p>You can reach me via the buttons on the About Me section above.</p>
   </section>
 
   <script src="js/script.js"></script>
