--- a/index.html
+++ b/index.html
@@ -7,61 +7,23 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- Navigation Bar -->
-  <nav class="main-nav">
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#ctf">CTF Write-ups</a></li>
-      <li><a href="#awards">Awards</a></li>
-      <li><a href="#certifications">Certifications</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+  <main class="hero">
+    <h1>Chris Begines</h1>
+    <p>
+      Current sophomore at The Ohio State University pursuing a degree in Computer and Information Science with a specialization in CyberSecurity. 
+      Pursuing work in offensive security, reverse engineering and vulnerability analysis. 
+      Feel free to check out any of my pages for more about me.
+    </p>
 
-  <!-- About Section -->
-  <section id="about" class="section hero">
-    <h1>Hi, I'm Chris Begines</h1>
-    <p>A cybersecurity student and developer passionate about reverse engineering, CTFs, and secure systems.</p>
-    <div class="social-buttons">
-      <a href="https://github.com/ChrisBegines123" target="_blank" class="btn">GitHub</a>
-      <a href="https://www.linkedin.com/in/YOUR-LINKEDIN" target="_blank" class="btn">LinkedIn</a>
-      <a href="mailto:YOUR-EMAIL@gmail.com" class="btn">Gmail</a>
+    <div class="page-buttons">
+      <a href="about.html" class="btn">About</a>
+      <a href="projects.html" class="btn">Projects</a>
+      <a href="experience.html" class="btn">Experience</a>
+      <a href="ctf.html" class="btn">CTF Write-ups</a>
+      <a href="awards.html" class="btn">Awards</a>
+      <a href="certifications.html" class="btn">Certifications</a>
+      <a href="contact.html" class="btn">Contact</a>
     </div>
-  </section>
-
-  <!-- Empty Placeholder Sections -->
-  <section id="projects" class="section">
-    <h2>Projects</h2>
-    <p>Coming soon...</p>
-  </section>
-
-  <section id="experience" class="section">
-    <h2>Experience</h2>
-    <p>Coming soon...</p>
-  </section>
-
-  <section id="ctf" class="section">
-    <h2>CTF Write-ups</h2>
-    <p>Coming soon...</p>
-  </section>
-
-  <section id="awards" class="section">
-    <h2>Awards</h2>
-    <p>Coming soon...</p>
-  </section>
-
-  <section id="certifications" class="section">
-    <h2>Certifications</h2>
-    <p>Coming soon...</p>
-  </section>
-
-  <section id="contact" class="section footer">
-    <h2>Contact</h2>
-    <p>You can reach me via the buttons on the About Me section above.</p>
-  </section>
-
-  <script src="js/script.js"></script>
+  </main>
 </body>
 </html>
