--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chris Begines | Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chris Begines</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <main class="hero">
-    <h1>Chris Begines</h1>
-    <p>
-      Current sophomore at The Ohio State University pursuing a degree in Computer and Information Science with a specialization in CyberSecurity. 
-      Pursuing work in offensive security, reverse engineering and vulnerability analysis. 
-      Feel free to check out any of my pages for more about me.
-    </p>
+  <nav class="top-nav">
+    <ul>
+      <li><a href="about.html">About</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="experience.html">Experience</a></li>
+      <li><a href="ctf.html">CTF Write-ups</a></li>
+      <li><a href="awards.html">Awards</a></li>
+      <li><a href="certifications.html">Certifications</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-    <div class="page-buttons">
-      <a href="about.html" class="btn">About</a>
-      <a href="projects.html" class="btn">Projects</a>
-      <a href="experience.html" class="btn">Experience</a>
-      <a href="ctf.html" class="btn">CTF Write-ups</a>
-      <a href="awards.html" class="btn">Awards</a>
-      <a href="certifications.html" class="btn">Certifications</a>
-      <a href="contact.html" class="btn">Contact</a>
+  <main class="hero">
+    <div class="hero-content">
+      <h1>Chris Begines</h1>
+      <p>
+        Current sophomore at The Ohio State University pursuing a degree in Computer and Information Science with a specialization in CyberSecurity. Pursuing work in offensive security, reverse engineering and vulnerability analysis. Feel free to check out any of my pages for more about me.
+      </p>
+      <!-- Could add social / buttons here later -->
     </div>
   </main>
 </body>
