--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="hero-section">
             <div class="profile-container">
                 <div class="profile-ring"></div>
-                <div class="profile-img">👤</div>
+                <img src="img/viceroy.webp" alt="Profile" class="profile-img">
             </div>
 
             <h1>About Me</h1>
@@ -294,7 +294,7 @@
             </p>
 
             <div class="gallery">
-                <div class="gallery-item">📷</div>
+                <img src="img/group.webp" alt="Description" class="gallery-item">
                 <div class="gallery-item">📷</div>
                 <div class="gallery-item">📷</div>
                 <div class="gallery-item">📷</div>
