--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="hero-section">
             <div class="profile-container">
                 <div class="profile-ring"></div>
-                <img src="img/viceroy.webp" alt="Profile" class="profile-img">
+                <img src="img/chris_pfp.jpeg" alt="Profile" class="profile-img">
             </div>
 
             <h1>About Me</h1>
@@ -294,10 +294,8 @@
             </p>
 
             <div class="gallery">
+                <img src="img/viceroy.webp" alt="Description" class="gallery-item">
                 <img src="img/group.webp" alt="Description" class="gallery-item">
-                <div class="gallery-item">📷</div>
-                <div class="gallery-item">📷</div>
-                <div class="gallery-item">📷</div>
             </div>
 
             <div class="social-container">
