--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             width: 100%;
             height: 200px;
             border-radius: 12px;
-            object-fit: cover;
+            object-fit: contain;
             background: #1a1f3a;
             border: 2px solid rgba(0, 212, 255, 0.2);
             transition: all 0.3s ease;
@@ -147,12 +147,58 @@
             justify-content: center;
             color: #00d4ff;
             font-size: 1.5rem;
+            cursor: pointer;
         }
 
         .gallery-item:hover {
             transform: scale(1.05);
             border-color: #00d4ff;
             box-shadow: 0 8px 30px rgba(0, 212, 255, 0.3);
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            animation: fadeIn 0.3s ease;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        .modal-content {
+            position: relative;
+            margin: auto;
+            display: block;
+            max-width: 90%;
+            max-height: 90%;
+            top: 50%;
+            transform: translateY(-50%);
+            border-radius: 8px;
+            box-shadow: 0 0 50px rgba(0, 212, 255, 0.5);
+        }
+
+        .close {
+            position: absolute;
+            top: 20px;
+            right: 40px;
+            color: #fff;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: color 0.3s ease;
+            z-index: 1001;
+        }
+
+        .close:hover {
+            color: #00d4ff;
         }
 
         h1 {
@@ -294,8 +340,8 @@
             </p>
 
             <div class="gallery">
-                <img src="img/viceroy.webp" alt="Description" class="gallery-item">
-                <img src="img/group.webp" alt="Description" class="gallery-item">
+                <img src="img/viceroy.webp" alt="Description" class="gallery-item" onclick="openModal(this)">
+                <img src="img/group.webp" alt="Description" class="gallery-item" onclick="openModal(this)">
             </div>
 
             <div class="social-container">
@@ -316,5 +362,24 @@
             </div>
         </div>
     </div>
+
+    <script>
+        function openModal(img) {
+            const modal = document.getElementById('imageModal');
+            const modalImg = document.getElementById('modalImage');
+            modal.style.display = 'block';
+            modalImg.src = img.src;
+        }
+
+        function closeModal() {
+            document.getElementById('imageModal').style.display = 'none';
+        }
+
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Escape') {
+                closeModal();
+            }
+        });
+    </script>
 </body>
 </html>
