--- a/experience.html
+++ b/experience.html
@@ -308,7 +308,7 @@
                         <div class="header-info">
                             <div class="company-name">Cyber Security Forum Initiative (CSFI)</div>
                             <div class="job-title">Cyber Security Threat Intelligence Intern<span class="current-badge">Current</span></div>
-                            <div class="job-type">Remote</div>
+                            <div class="job-type">Threat Intelligence</div>
                             <div class="location-date">
                                 <span class="location">Remote</span>
                                 <span class="date">September 2025 – Present</span>
