Updated contact to resume
asdg

--- a/experience.html
+++ b/experience.html
@@ -292,7 +292,7 @@
         <a href="ctf.html" class="nav-btn">CTF</a>
         <a href="certifications.html" class="nav-btn">Certifications</a>
         <a href="awards.html" class="nav-btn">Awards</a>
-        <a href="contact.html" class="nav-btn">Contact</a>
+        <a href="contact.html" class="nav-btn">Resume</a>
     </nav>
 
     <div class="container">
